--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,6 @@ keywords = translate isPlural
 add_comments = TRANSLATORS:
 output_file = ckanext/archiver/i18n/ckanext-archiver.pot
 width = 80
-mapping_file = babel.cfg
 
 [init_catalog]
 domain = ckanext-archiver
@@ -17,9 +16,13 @@ output_dir = ckanext/archiver/i18n
 previous = true
 
 [compile_catalog]
-domain = ckanext/archiver/ckanext-archiver
-directory = i18n
+domain = ckanext-archiver
+directory = ckanext/archiver/i18n
 statistics = true
 
 [tool:pytest]
-norecursedirs=ckanext/archiver/tests/nose
+filterwarnings =
+        ignore::sqlalchemy.exc.SADeprecationWarning
+        ignore::sqlalchemy.exc.SAWarning
+        ignore::DeprecationWarning
+addopts = --ckan-ini test.ini
